# Snake

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
build-vs2022-debug/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  Snake.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build-vs2022-debug/source/app/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  SnakeMain.sln  SnakeMain.vcxproj  SnakeMain.vcxproj.filters  cmake_install.cmake
build-vs2022-debug/source/core/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  SnakeCoreLib.sln  SnakeCoreLib.vcxproj  SnakeCoreLib.vcxproj.filters  cmake_install.cmake
build-vs2022-debug/source/render/: ALL_BUILD.vcxproj  (+9 more)
build-vs2022-debug/tests/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AllTests.vcxproj  AllTests.vcxproj.filters  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  UnitTests-b12d07c_include.cmake  UnitTests.sln  UnitTests.vcxproj  UnitTests.vcxproj.filters  cmake_install.cmake
source/app/: CMakeLists.txt  main.cpp
source/app/Game/: Game.cpp  Game.h  GameState.cpp  GameState.h
source/core/: CMakeLists.txt
source/core/include/: Board.h  Command.h  GameConstants.h  IEatable.h  IFood.h  IMove.h  IObject.h  InputHandler.h  Menu.h  Snake.h  Utilities.h
source/core/private/: Board.cpp  Command.cpp  IFood.cpp  IObject.cpp  InputHandler.cpp  Snake.cpp
source/core/public/: Board.h  Command.h  GameConstants.h  IFood.h  InputHandler.h  Snake.h
source/core/src/: Board.cpp  Command.cpp  IEatable.cpp  IFood.cpp  IMove.cpp  IObject.cpp  InputHandler.cpp  Menu.cpp  Snake.cpp  Utilities.cpp
source/render/: CMakeLists.txt
source/render/include/: Button.h  GameUI.h  Menu.h  RenderBoard.h  RenderConstant.h  RenderFood.h  RenderSnake.h
source/render/private/: Button.cpp  GameUI.cpp  RenderBoard.cpp  RenderSnake.cpp
source/render/public/: Button.h  GameUI.h  RenderBoard.h  RenderFood.h  RenderSnake.h
source/render/src/: Button.cpp  GameUI.cpp  Menu.cpp  RenderBoard.cpp  RenderFood.cpp  RenderSnake.cpp
tests/: CMakeLists.txt  TestBoard.cpp  TestIFood.cpp  TestSnake.cpp
(+106 files in other folders)
